[package]
name = "quark"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["proc-macros"]

[dependencies]
# Monoxide crates
proc-macros = { path = "proc-macros" }

# External dependencies
bytemuck = "1.13.1"
color-eyre = "0.6.2"
openxr-sys = "0.9.3"
serde = "1.0.160"
thiserror = "1.0.40"
tokio = { version = "1.28.0", features = [
	"rt",
	"net",
	"bytes",
	"io-util",
	"sync",
	"macros",
	"rt-multi-thread",
] }
stardust-xr-schemas = "1.4.0"
rustc-hash = "1.1.0"
tracing = "0.1.37"
dashmap = "5.4.0"
once_cell = "1.17.1"
cluFlock = "1.2.7"
dirs = "5.0.1"
