[package]
name = "quark"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["api_layer_test", "proc-macros"]

[dependencies]
# Monoxide crates
proc-macros = { path = "proc-macros" }

# External dependencies
dashmap = "6.1.0"
rustc-hash = "2.0.0"
openxr = { git = "https://github.com/technobaboo/openxrs.git", branch = "quark-hax", default-features = false }
ustr = "1.0.0"
